[package]
name = "proc-experiments"
version = "0.1.0"
authors = ["Trattue <63713970+Trattue@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bindings = {path = "bindings"}
dont_disappear = "3.0.1"
