[package]
name = "proc-experiments"
version = "0.1.0"
authors = ["Trattue <63713970+Trattue@users.noreply.github.com>"]
edition = "2018"
description = "Some experiments regarding processes in Windows and interacting with the WinAPI in Rust."
license = "MIT OR Apache-2.0"

[dependencies]
bindings = {path = "bindings"}
dont_disappear = "3.0.1"
